--- a/Styles/style.css
+++ b/Styles/style.css
@@ -12,8 +12,7 @@
 .header nav {
     display: flex;
     justify-content: space-between;
-    max-width: 1160px;
-    margin: 20px auto;
+    margin: 60px 140px;
     align-items: center;
 }
 
@@ -83,8 +82,7 @@
     display: flex;
     align-items: center;
     gap: 50px;
-    max-width: 1160px;
-    margin: 0 auto;
+    margin: 60px 140px;
 }
 
 .banner-heading {
@@ -116,4 +114,104 @@
     border-radius: 12px;
     padding: 10px 47px;
     cursor: pointer;
+}
+
+/* Curriculum Styles */
+.curriculum {
+    /* max-width: 1160px; */
+    padding: 60px 140px;
+    background-image: url("../assets/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.curriculum-heading {
+    font-weight: bold;
+    font-size: 2.875rem;
+    text-align: center;
+    margin-bottom: 80px;
+}
+
+.curriculum-cards {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 80px;
+}
+
+.curriculum-card1 {
+    text-align: center;
+    border-radius: 18px;
+    border: none;
+    background: linear-gradient(180.00deg, rgb(222, 245, 255), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+    box-shadow: inset 0px 0px 30px 0.2px rgba(0, 0, 0, 0.05);
+    padding: 53px 40px;
+}
+
+.curriculum-card2 {
+    text-align: center;
+    border-radius: 18px;
+    border: none;
+    background: linear-gradient(180.00deg, rgb(255, 244, 220), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+    box-shadow: inset 0px 0px 30px 0.2px rgba(0, 0, 0, 0.05);
+    padding: 53px 40px;
+}
+
+.curriculum-card3 {
+    text-align: center;
+    border-radius: 18px;
+    border: none;
+    background: linear-gradient(180.00deg, rgb(242, 232, 255), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
+    box-shadow: inset 0px 0px 30px 0.2px rgba(0, 0, 0, 0.05);
+    padding: 53px 40px;
+}
+
+.card-img {
+    height: 142px;
+}
+
+.card-heading {
+    font-weight: bold;
+    color: #202020;
+    font-size: 1.5625rem;
+    margin-top: 32px;
+    margin-bottom: 34px;
+}
+
+.card-description {
+    color: #808080;
+    font-weight: 500;
+    margin-bottom: 34px;
+}
+
+.more-card1-description {
+    text-decoration: none;
+    font-weight: bold;
+    color: #64C8FF;
+}
+
+.more-card2-description {
+    text-decoration: none;
+    font-weight: bold;
+    color: #F0AA00;
+}
+
+.more-card3-description {
+    text-decoration: none;
+    font-weight: bold;
+    color: #8700FF;
+}
+
+.curriculum-btns {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.curriculum-btn {
+    border-radius: 50%;
+    border: none;
+    background-color: orange;
+    padding: 18px 22px;
+    cursor: pointer;
+    color: #FFFFFF;
 }
