--- a/Styles/style.css
+++ b/Styles/style.css
@@ -118,7 +118,6 @@
 
 /* Curriculum Styles */
 .curriculum {
-    /* max-width: 1160px; */
     padding: 60px 140px;
     background-image: url("../assets/bg.png");
     background-repeat: no-repeat;
@@ -214,4 +213,86 @@
     padding: 18px 22px;
     cursor: pointer;
     color: #FFFFFF;
+}
+
+/* Stories Styles */
+.stories {
+    padding: 60px 140px;
+    background: url("../assets/bg.png"), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
+    background-repeat: repeat-y;
+    background-size: 100% auto;
+}
+
+.stories-heading {
+    font-weight: bold;
+    font-size: 2.875rem;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 80px;
+}
+
+.story-cards {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 80px;
+}
+
+.story-card {
+    flex: 1;
+    border-radius: 18px;
+    background-color: #FFFFFF;
+}
+
+.story-card-heading {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: 62px 100px 52px 38px;
+}
+
+.story-card-description {
+    margin: 0px 96px 39px 35px;
+    font-weight: 500;
+    color: #666666;
+}
+
+.story-card-img {
+    width: 100%;
+    border-radius: 18px 18px 0 0;
+}
+
+.story-cards-mini {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.story-card-mini {
+    border-radius: 16px;
+    border: none;
+    background-color: #FFFFFF;
+}
+
+.story-card-mini-img {
+    border-radius: 16px 16px 0 0;
+}
+
+.story-heading {
+    font-weight: bold;
+    margin: 44px 55px 34px 38px;
+}
+
+.story-btn {
+    color: #FFFFFF;
+    background-color: black;
+    border: none;
+    border-radius: 12px;
+    padding: 10px 61px;
+    font-weight: bold;
+    font-size: 1.25rem;
+    cursor: pointer;
+}
+
+.btn-story {
+    text-align: center;
 }
