--- a/Styles/style.css
+++ b/Styles/style.css
@@ -636,7 +636,7 @@ marquee {
 
     /* Footer Styles */
     .footer {
-        padding: 60px 15px;
+        padding: 60px 15px 100px;
     }
 
     .footer-columns {
